--- a/pyvenv.cfg
+++ b/pyvenv.cfg
@@ -1,3 +1,5 @@
-home = C:\Python310
+home = C:\Users\mlarpo\AppData\Local\Programs\Python\Python311
 include-system-site-packages = false
-version = 3.10.10
+version = 3.11.4
+executable = C:\Users\mlarpo\AppData\Local\Programs\Python\Python311\python.exe
+command = C:\Users\mlarpo\AppData\Local\Programs\Python\Python311\python.exe -m venv E:\github\quick-raffler
