--- a/pyvenv.cfg
+++ b/pyvenv.cfg
@@ -1,5 +1,5 @@
-home = C:\Users\mlarpo\AppData\Local\Programs\Python\Python311
+home = C:\Program Files\Python311
 include-system-site-packages = false
-version = 3.11.4
-executable = C:\Users\mlarpo\AppData\Local\Programs\Python\Python311\python.exe
-command = C:\Users\mlarpo\AppData\Local\Programs\Python\Python311\python.exe -m venv E:\github\quick-raffler
+version = 3.11.8
+executable = C:\Program Files\Python311\python.exe
+command = C:\Program Files\Python311\python.exe -m venv E:\github\quick-raffler
